Wed Jan 16 07:53:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * include/makeinclude/ace_flags.bor:
          Added new flags for the new TAO ETCL orbsvcs library

Tue Jan 15 17:24:53 2002  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_Context.cpp (report_error()): Set ACE_OS::last_error()
          to ERR_get_error() so the caller can get the error code later.

        * ace/SSL/SSL_SOCK_Connector.cpp: If the SSL handshake phase of a
          connection attempt fails, close the underlying socket.

Tue Jan 15 15:35:41 2002  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Connector.(h cpp):
        * ace/LSOCK_Connector.(h i cpp):
        * ace/MEM_Connector.(h cpp):
        * ace/SSL/SSL_SOCK_Connector.(h cpp):
          Improved the Doxygenation and removed the protocol_family and
          protocol arguments from the ctors and connect() methods. The
          protocol family is always taken from the ACE_Addr remote_sap
          argument since it can now be either PF_INET or PF_INET6 (for
          SOCK_Connector objects) and should be PF_UNIX for LSOCKs.
          It is pointless to allow the user to request something that
          is impossible to do correctly.

Tue Jan 15 10:52:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * include/makeinclude/ace_flags.bor:
          Added new flags for the new TAO PortableGroup library

Mon Jan 14 14:40:25 2002  Carlos O'Ryan  <coryan@uci.edu>

	* bin/g++dep:
	  Fixed small problems in the dependency generation:
	  - The script did not properly handle files with '+' in their
	    names.
	  - In some cases the script generated escaped blanks, i.e. lines
	    containing a blank preceded by a backslash.  Such blanks are
	    interpreted as part of a dependency name and break havoc with
	    the builds.

Mon Jan 14 16:49:37 2002  Steve Huston  <shuston@riverace.com>

        * ace/OS.h (ACE_STATIC_SVC_DEFINE): Corrected the documentation to